Me------をHealthDataViewControllerに名前変えた

--- a/pppppp/Base.lproj/Main.storyboard
+++ b/pppppp/Base.lproj/Main.storyboard
@@ -485,10 +485,10 @@
             </objects>
             <point key="canvasLocation" x="4124.6376811594209" y="784.82142857142856"/>
         </scene>
-        <!--Me View Controller-->
+        <!--Health Data View Controller-->
         <scene sceneID="JCb-GZ-TGH">
             <objects>
-                <viewController storyboardIdentifier="MeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1HG-CV-6wm" customClass="MeViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HealthDataViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1HG-CV-6wm" customClass="HealthDataViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZMO-AX-x2W">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
